# PrintersLog

./: .gitignore  LICENSE  Printers.kv  PrintersLogs.kv  PrintersLogs.py  README.md  app.py  backup.py  bordered_boxlayout.py  boxlayout_with_action_bar.kv  config.json  configscreen.kv  configscreen.py  configuration.py  dados.json  documentoscreen.py  filterscreen.kv  filterscreen.py  genericvisualdados.py  leitura.py  listscreen.kv  listscreen.py  main.py  models.py  navigation_screen_manager.py  pdf_generator.py  pdfscreen.kv  pdfscreen.py  pyproject.toml  requirements.txt  resultscreen.kv  resultscreen.py  savedscreen.kv  savedscreen.py  storage_manager.py  testdb.py  visualdados.py
csvs/: primeiro.html.csv
csvs/totals/: primeiro.html_total_22-07-2024.csv  primeiro.html_total_23-07-2024.csv  primeiro.html_total_25-07-2024.csv
printers/: leitura.csv  primeiro.html  quarto.html  segundo.htm  terceiro.html
telas/: configscreen.py  documentoscreen.kv  documentoscreen.py  filterscreen.kv  filterscreen.py  listscreen.kv  listscreen.py  pdfscreen.kv  pdfscreen.py  resultscreen.kv  resultscreen.py  savedscreen.kv  savedscreen.py
