[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "PrintersLogs"
version = "2024.1.0"
description = "Projeto feito utilizando Kivy para a criação de telas interativas, onde o usuário consiga ver/manipular/criar dados de logs de impressoras."
long_description = "README.md"
long_description_content_type = "text/markdown"

requires-python = ">=3.11"

authors = [{ name = "Francisco Serafim", email = "serafim999junior@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]

dependencies = [
    "Kivy~=2.3.0",
    "fpdf~=1.7.2",
    "pandas~=2.2.2",
    "SQLAlchemy~=2.0.32",
    "beautifulsoup4~=4.12.3",
    "python-dateutil~=2.9.0.post0",
    "numpy~=2.0.0"
]

[project.urls]
Home = "https://github.com/NoPsNick/PrintersLog"
